# Intro-to-Astro2025

./: pyproject.toml
Week2_Python_Exoplanet_Detection/: Python Tutorial.ipynb
Week3_Github_and_NASA_Exoplanet_Archive/: Intro-to-Astro_Week3_NEA_blank.ipynb  PSCompPars.csv  github-assignments.ipynb
Week4_Numpy_Pandas_TESS/: Introduction_to_TESS.ipynb  numpy.ipynb  pandas.ipynb
Week6_Overleaf_Scipy_Astropy/: Problem_Set_on_Numpy_Scipy_Astropy_Solutions.ipynb
Week7_Matplotlib_Model_Fitting/: Plotting_assignment.ipynb  RadVel_Tutorial.ipynb
