[tool.poetry]
name = "intro-to-astro2025"
version = "0.1.0"
description = ""
authors = ["Emre Tuncer <emretuncer.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
jupyterlab = "^4.4.5"
jupyter-contrib-nbextensions = "^0.7.0"
numpy = "2.1.0"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
astropy = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
